fix(tps-list): fix photo overflow scrolling behaviour

--- a/src/app/hierarchy/tps-list.component.css
+++ b/src/app/hierarchy/tps-list.component.css
@@ -21,6 +21,7 @@
 
 .tps-item > .foto {
   flex: 1 1 auto;
+  overflow-x: scroll;
 }
 
 section.table-header {
